@@ -14,8 +14,8 @@ import com.hmi.cafe_shop.repository.UserRepository;
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
-    private final PasswordEncoder passwordEncoder;    
-    
+    private final PasswordEncoder passwordEncoder;
+
     public UserServiceImpl(UserRepository userRepository, PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
@@ -24,68 +24,46 @@ public class UserServiceImpl implements UserService {
     @Override
     public User createUser(User user) {
         user.setPassword(passwordEncoder.encode(user.getPassword()));
+        user.setIsActive(true);
         return userRepository.save(user);
     }
 
     @Override
-    public Optional<User> getUserById(Long id) {
-        return userRepository.findById(id);
-    }
-
-    @Override
-    public List<User> getAllUsers() {
-        return userRepository.findAll();
-    }
-
-    @Override
-    @Transactional // Database Update စိတ်ချရစေရန်
     public User updateUser(User user, Long id) {
-        // .get() အစား စနစ်တကျ Exception ထုတ်ရန် ပြင်ထားပါသည်
-        User oldUser = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + id));
-        
+        User oldUser = userRepository.findById(id).orElseThrow(() -> new RuntimeException("User not found"));
         oldUser.setName(user.getName());
         oldUser.setRole(user.getRole());
         oldUser.setIsActive(user.getIsActive());
-        
-        if (user.getPassword() != null && !user.getPassword().trim().isEmpty()) {
+        if (user.getPassword() != null && !user.getPassword().isBlank()) {
             oldUser.setPassword(passwordEncoder.encode(user.getPassword()));
         }
         return userRepository.save(oldUser);
     }
 
     @Override
-    public void deleteUser(Long id) {
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        user.setIsActive(false);   // ✅ soft delete
-        userRepository.save(user);
+    public User activateUser(Long id) {
+        User user = userRepository.findById(id).orElseThrow(() -> new RuntimeException("User not found"));
+        user.setIsActive(true);
+        return userRepository.save(user);
     }
+
+    @Override
+    public User deactivateUser(Long id) {
+        User user = userRepository.findById(id).orElseThrow(() -> new RuntimeException("User not found"));
+        user.setIsActive(false);
+        return userRepository.save(user);
+    }
+
+    @Override public Optional<User> getUserById(Long id) { return userRepository.findById(id); }
+    @Override public List<User> getAllUsers() { return userRepository.findAll(); }
+    @Override public List<User> getActiveUsers() { return userRepository.findByIsActiveTrue(); }
+    @Override public Optional<User> getUserByEmail(String email) { return userRepository.findByEmail(email); }
 
     @Override
     public String login(String email, String password) {
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        if (!passwordEncoder.matches(password, user.getPassword())) {
-            throw new RuntimeException("Invalid password");
-        }
-
-        if (!user.getIsActive()) {
-            throw new RuntimeException("User is inactive");
-        }
-
+        User user = userRepository.findByEmail(email).orElseThrow(() -> new RuntimeException("User not found"));
+        if (!passwordEncoder.matches(password, user.getPassword())) throw new RuntimeException("Invalid password");
+        if (!user.getIsActive()) throw new RuntimeException("User is inactive");
         return JwtUtil.generateToken(user.getEmail(), user.getRole());
-    }
-
-    @Override
-    public Optional<User> getUserByEmail(String email) {
-        return userRepository.findByEmail(email);
-    }
-
-    @Override
-    public List<User> getActiveUsers() {
-        return userRepository.findByIsActiveTrue();
     }
 }
